--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,16 @@
             <artifactId>DateChooser</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>unknown.binary</groupId>
+            <artifactId>datetime</artifactId>
+            <version>SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.4</version>
+        </dependency>
     </dependencies>
 </project>
