--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <groupId>com.squareup.okhttp3</groupId>
     <artifactId>okhttp</artifactId>
     <version>3.4.2</version>
+            <type>jar</type>
         </dependency>
         <dependency>
           <groupId>com.toedter</groupId>
@@ -44,5 +45,22 @@
             <artifactId>joda-time</artifactId>
             <version>2.4</version>
         </dependency>
+        <dependency>
+        <groupId>org.riversun</groupId>
+        <artifactId>okhttp3-cookie-helper</artifactId>
+        <version>1.0.0</version>
+        </dependency>
+        <dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.5</version>
+            <type>jar</type>
+        </dependency>
+<dependency>
+  <groupId>com.google.code.gson</groupId>
+  <artifactId>gson</artifactId>
+  <version>2.8.4</version>
+</dependency>
+
     </dependencies>
 </project>
